# WebSentinel

./: .env.example  .gitignore  README.md  api_server.py  debug_current_analysis.py  final_validation_test.py  main.py  portiarules.txt  pyproject.toml  requirements.txt  test_analysis_display.py  test_analysis_fix.py  test_enhanced_analysis.py  test_improved_detection.py  test_migration.py  test_portia_analysis.py  test_url_detection_fix.py  test_user_scenario.py  website_testing_agent.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Footer.tsx  Header.tsx  JsonPreview.tsx  SavedWorkflows.tsx  ScreenshotInstructionField.tsx  TestConfigForm.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
